1. switch data - song play status to control the playing process and styling; 2.adding lyrics scrolling effects 3.still need to fix the some styling issues such as first paused not showing the play button. maybe consider switching to put the event handler on another element instead

--- a/src/css/songPlay.scss
+++ b/src/css/songPlay.scss
@@ -158,12 +158,19 @@ $fontColor: #333;
             height: px(67);
             overflow: scroll;
             text-align: center;
-            color: #f9f9f9;
+            color: hsla(0,0%,100%,.6);
             font-size: px(13);
             margin-top: px(14px);
+            line-height: 1.4;
             
             p {
+                font-size: inherit;
                 padding-bottom: px(5);
+                transition: transform .6s ease-in-out;
+            }
+
+            p.active {
+                color: rgb(255, 255, 255);
             }
         }
     }
